prql-compiler/src/parser/snapshots/prql_compiler__parser__test__pipeline_parse_tree.snap
---
source: prql-compiler/src/parser/mod.rs
expression: "parse(include_str!(\"../../examples/compile-files/queries/variables.prql\")).unwrap()"
---
- name: main
  VarDef:
    value:
      Pipeline:
        exprs:
          - FuncCall:
              name:
                Ident:
                  - from
              args:
                - Ident:
                    - employees
          - FuncCall:
              name:
                Ident:
                  - filter
              args:
                - Binary:
                    left:
                      Ident:
                        - country
                    op: Eq
                    right:
                      Literal:
                        String: USA
          - FuncCall:
              name:
                Ident:
                  - derive
              args:
                - Tuple:
                    - Binary:
                        left:
                          Ident:
                            - salary
                        op: Add
                        right:
                          Ident:
                            - payroll_tax
                      alias: gross_salary
                    - Binary:
                        left:
                          Ident:
                            - gross_salary
                        op: Add
                        right:
                          Ident:
                            - benefits_cost
                      alias: gross_cost
          - FuncCall:
              name:
                Ident:
                  - filter
              args:
                - Binary:
                    left:
                      Ident:
                        - gross_cost
                    op: Gt
                    right:
                      Literal:
                        Integer: 0
          - FuncCall:
              name:
                Ident:
                  - group
              args:
                - Tuple:
                    - Ident:
                        - title
                    - Ident:
                        - country
                - FuncCall:
                    name:
                      Ident:
                        - aggregate
                    args:
                      - Tuple:
                          - FuncCall:
                              name:
                                Ident:
                                  - average
                              args:
                                - Ident:
                                    - salary
                          - FuncCall:
                              name:
                                Ident:
                                  - average
                              args:
                                - Ident:
                                    - gross_salary
                          - FuncCall:
                              name:
                                Ident:
                                  - sum
                              args:
                                - Ident:
                                    - salary
                          - FuncCall:
                              name:
                                Ident:
                                  - sum
                              args:
                                - Ident:
                                    - gross_salary
                          - FuncCall:
                              name:
                                Ident:
                                  - average
                              args:
                                - Ident:
                                    - gross_cost
                          - FuncCall:
                              name:
                                Ident:
                                  - sum
                              args:
                                - Ident:
                                    - gross_cost
                            alias: sum_gross_cost
                          - Ident:
                              - count
                            alias: ct
          - FuncCall:
              name:
                Ident:
                  - sort
              args:
                - Ident:
                    - sum_gross_cost
          - FuncCall:
              name:
                Ident:
                  - filter
              args:
                - Binary:
                    left:
                      Ident:
                        - ct
                    op: Gt
                    right:
                      Literal:
                        Integer: 200
          - FuncCall:
              name:
                Ident:
                  - take
              args:
                - Literal:
                    Integer: 20
    ty_expr: ~
    kind: Main

